# knowledge-graph-context-pipeline

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  RESEARCH.md  config.toml  pyproject.toml  requirements.txt
docs/: ADMIN_GUIDE.md  ARCHITECTURE.md  CTI_INTEGRATION.md  DATA_FLOW.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  INFRASTRUCTURE.md  README.md  SBOM.md  SECURITY.md
docs/status/: 2026-03-27-prompt-injection-mitigation.md
kgcp/: __init__.py  cli.py  config.py  models.py
kgcp/anomaly/: __init__.py  baseline.py  detector.py  scorer.py
kgcp/export/: __init__.py  attack_mapper.py  base.py  entity_type_map.py  misp_adapter.py  opencti_adapter.py  stix_adapter.py  thehive_adapter.py
kgcp/extraction/: __init__.py  confidence.py  extractor.py  llm_client.py  normalizer.py  prompts.py  sanitizer.py  validator.py
kgcp/ingestion/: __init__.py  chunker.py  parser_registry.py
kgcp/integration/: __init__.py  claude_api.py  output.py
tests/: test_anomaly_baseline.py  test_anomaly_detector.py  test_anomaly_scorer.py  test_anomaly_storage.py  test_attack_mapper.py  test_attack_paths.py  test_base_exporter.py  test_confidence.py  test_entity_type_map.py  test_extraction.py  test_fusion_cli.py  test_graph_cache.py  test_ingestion.py  test_misp_adapter.py  test_models.py  test_normalizer.py  test_opencti_adapter.py  test_packing.py  test_retrieval.py  test_sanitizer.py  test_stix_adapter.py  test_storage.py  test_taxii_server.py  test_temporal_date_utils.py  test_temporal_storage.py  test_temporal_trends.py  test_thehive_adapter.py  test_unified_scorer.py  test_validator.py
(+23 files in other folders)
