[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kgcp"
version = "0.1.0"
description = "Knowledge Graph Context Pipeline — token-efficient structured context for Claude"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

dependencies = [
    "networkx>=3.4.2",
    "requests>=2.32.3",
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-louvain>=0.16",
]

[project.optional-dependencies]
parsing = [
    "PyMuPDF>=1.24.0",
    "beautifulsoup4>=4.12.0",
    "html2text>=2024.2.26",
]
claude = [
    "anthropic>=0.40.0",
]
tokens = [
    "tiktoken>=0.7.0",
]
cti = [
    "stix2>=3.0.0",
]
cti-platforms = [
    "kgcp[cti]",
    "pymisp>=2.4.180",
    "thehive4py>=2.0.0",
    "pycti>=6.0.0",
]
all = [
    "kgcp[parsing,claude,tokens,cti]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
kgcp = "kgcp.cli:main"

[tool.setuptools.packages.find]
include = ["kgcp*"]
